--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Home/RecuperarAcceso.cshtml
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Home/RecuperarAcceso.cshtml
@@ -8,9 +8,9 @@
 
         <div class="card">
             <div class="card-body login-card-body">
-                <p class="login-box-msg">Inicio de sesión</p>
+                <p class="login-box-msg">Recuperar acceso</p>
 
-                @using (Html.BeginForm("IniciarSesion", "Home", FormMethod.Post))
+                @using (Html.BeginForm("RecuperarAcceso", "Home", FormMethod.Post))
                 {
                     <div class="input-group mb-3">
                         @Html.TextBoxFor(m => m.Correo, new { @class = "form-control", @placeholder = "Correo Electrónico", @type = "Email", @required = "true" })
@@ -20,15 +20,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="input-group mb-3">
-                        @Html.TextBoxFor(m => m.Contrasenna, new { @class = "form-control", @placeholder = "Contraseña", @type = "Password", @required = "true" })
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
-                        </div>
-                    </div>
-
+                    
                     @if (ViewBag.MsjPantalla != null)
                     {
                         <div class="alert alert-warning" role="alert" style="text-align:center">
@@ -44,11 +36,12 @@
                 }
 
                 <div style="text-align:center; margin-top:2%">
-                    <a href="@Url.Action("RecuperarAcceso","Home")" class="text-center">¿Olvidaste la contraseña?</a>
+                    <a href="@Url.Action("IniciarSesion","Home")" class="text-center">¿Ya tienes una cuenta?</a>
                 </div>
                 <div style="text-align:center; margin-top:2%">
                     <a href="@Url.Action("RegistrarUsuario","Home")" class="text-center">¿No tienes una cuenta?</a>
                 </div>
+               
             </div>
         </div>
     </div>
