--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Home/RegistrarUsuario.cshtml
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Home/RegistrarUsuario.cshtml
@@ -29,7 +29,9 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        @Html.TextBoxFor(m => m.Contrasenna, new { @class = "form-control", @placeholder = "Contraseña", @type = "Password", @required = "true" })
+                        @Html.TextBoxFor(m => m.Contrasenna, new { @class = "form-control", @placeholder = "Contraseña", @type = "Password", @required = "true",
+                                @pattern = "^((?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[\\W]).{6,20})"
+                            })
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
