--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Shared/_Layout.cshtml
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Blank Page</title>
+    <title>Sistema JN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="~/lib/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="~/lib/css/adminlte.css" rel="stylesheet">
@@ -26,28 +26,23 @@
             <ul class="navbar-nav ml-auto">    
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
-                        <i class="far fa-bell"></i>
-                        <span class="badge badge-warning navbar-badge">15</span>
+                        <i class="fas fa-users mr-2"></i>
+                        <span class="">@Context.Session.GetString("Nombre")!.ToString()</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <span class="dropdown-item dropdown-header">15 Notifications</span>
+                        <span class="dropdown-item dropdown-header"> Información </span>
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item">
-                            <i class="fas fa-envelope mr-2"></i> 4 new messages
-                            <span class="float-right text-muted text-sm">3 mins</span>
+                            <i class="fas fa-envelope mr-2"></i> Perfil
                         </a>
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item">
-                            <i class="fas fa-users mr-2"></i> 8 friend requests
-                            <span class="float-right text-muted text-sm">12 hours</span>
+                            <i class="fas fa-users mr-2"></i> Seguridad
                         </a>
                         <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-file mr-2"></i> 3 new reports
-                            <span class="float-right text-muted text-sm">2 days</span>
+                        <a href="@Url.Action("Salir","Home")" class="dropdown-item">
+                            <i class="fas fa-file mr-2"></i> Salir
                         </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                     </div>
                 </li>
             </ul>
