--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Home/CambiarContrasenna.cshtml
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Home/CambiarContrasenna.cshtml
@@ -1,1 +1,59 @@
-﻿
+﻿@model ProyectoWeb_Jueves.Entidades.Usuario
+@{
+    Layout = "~/Views/Shared/_Layout_Externo.cshtml";
+}
+
+<div class="hold-transition login-page">
+    <div class="login-box">
+
+        <div class="card">
+            <div class="card-body login-card-body">
+                <p class="login-box-msg">Cambio de contraseña</p>
+
+                @using (Html.BeginForm("CambiarContrasenna", "Home", FormMethod.Post))
+                {
+                    <div class="input-group mb-3">
+                        @Html.TextBoxFor(m => m.Correo, new { @class = "form-control", @placeholder = "Correo Electrónico", @type = "Email", @required = "true", @readonly="true"})
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <span class="fas fa-envelope"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="input-group mb-3">
+                        @Html.TextBoxFor(m => m.ContrasennaTemporal, new { @class = "form-control", @placeholder = "Contraseña Temporal", @type = "Password", @required = "true" })
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <span class="fas fa-lock"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="input-group mb-3">
+                        @Html.TextBoxFor(m => m.Contrasenna, new { @class = "form-control", @placeholder = "Contraseña Nueva", @type = "Password", @required = "true",
+                                @pattern = "^((?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[\\W]).{6,20})"
+                            })
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <span class="fas fa-lock"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    @if (ViewBag.MsjPantalla != null)
+                    {
+                        <div class="alert alert-warning" role="alert" style="text-align:center">
+                            @ViewBag.MsjPantalla
+                        </div>
+                    }
+
+                    <div class="row">
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-primary btn-block">Procesar</button>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
