--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Shared/_Layout_Externo.cshtml
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Shared/_Layout_Externo.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Blank Page</title>
+    <title>Sistema JN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="~/lib/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="~/lib/css/adminlte.css" rel="stylesheet">
@@ -17,11 +17,9 @@
         @RenderBody()
 
         <footer class="main-footer">
-            <div class="float-right d-none d-sm-block">
-                <b>Version</b> 3.0.4
-            </div>
-            <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
-            reserved.
+            <footer class="main-footer">
+                <strong>Sistema Web Jueves Noche</strong>
+            </footer>
         </footer>
 
     </div>
