--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Shared/_Layout.cshtml
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/lib/css/adminlte.css" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link href="https://cdn.datatables.net/2.0.2/css/dataTables.bootstrap4.css" rel="stylesheet">
 </head>
 
 <body class="hold-transition sidebar-mini">
@@ -118,5 +119,7 @@
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/js/adminlte.min.js"></script>
+    <script src="https://cdn.datatables.net/2.0.2/js/dataTables.js"></script>
+    <script src="https://cdn.datatables.net/2.0.2/js/dataTables.bootstrap4.js"></script>
 </body>
 </html>
