--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Shared/_Layout.cshtml
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sistema JN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/lib/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.3.0/font-awesome-animation.min.css">
     <link href="~/lib/css/adminlte.css" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
@@ -17,32 +18,28 @@
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fa fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="../../index3.html" class="nav-link">Home</a>
+                    <a href="@Url.Action("PantallaPrincipal", "Home")" class="nav-link">Inicio</a>
                 </li>
             </ul>
 
             <ul class="navbar-nav ml-auto">    
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
-                        <i class="fas fa-users mr-2"></i>
+                        <i class="fa fa-users mr-2"></i>
                         <span class="">@Context.Session.GetString("Nombre")!.ToString()</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                         <span class="dropdown-item dropdown-header"> Rol: @Context.Session.GetString("NombreRol")!.ToString() </span>
                         <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-envelope mr-2"></i> Perfil
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-users mr-2"></i> Seguridad
+                        <a href="@Url.Action("ConsultarPerfil","Usuario")" class="dropdown-item">
+                            <i class="fa fa-envelope mr-2"></i> Perfil
                         </a>
                         <div class="dropdown-divider"></div>
                         <a href="@Url.Action("Salir","Home")" class="dropdown-item">
-                            <i class="fas fa-file mr-2"></i> Salir
+                            <i class="fa fa-file mr-2"></i> Salir
                         </a>
                     </div>
                 </li>
@@ -50,12 +47,8 @@
         </nav>
 
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            <a href="../../index3.html" class="brand-link">
-                <img src="~/lib/img/AdminLTELogo.png"
-                     alt="AdminLTE Logo"
-                     class="brand-image img-circle elevation-3"
-                     style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+            <a href="@Url.Action("PantallaPrincipal", "Home")" class="brand-link" style="text-align:center">   
+                <span class="brand-text font-weight-light">Sistema Web JN</span>
             </a>
 
             <div class="sidebar">
@@ -67,16 +60,16 @@
                         {
                             <li class="nav-item has-treeview">
                                 <a href="#" class="nav-link">
-                                    <i class="nav-icon fas fa-table"></i>
+                                    <i class="nav-icon fa fa-table"></i>
                                     <p>
                                         Mantenimientos
-                                        <i class="fas fa-angle-left right"></i>
+                                        <i class="fa fa-angle-left right"></i>
                                     </p>
                                 </a>
                                 <ul class="nav nav-treeview">
                                     <li class="nav-item">
                                         <a href="@Url.Action("ConsultarProductos","Producto")" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
+                                            <i class="fa fa-tags nav-icon"></i>
                                             <p>Productos</p>
                                         </a>
                                     </li>
